--- a/web/css/full-width-pics.css
+++ b/web/css/full-width-pics.css
@@ -5,7 +5,7 @@
  */
 
 body {
-    background-color:   #f7f7e9;
+    background-color: #f7f7e9;
     margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
@@ -17,7 +17,8 @@ body {
     background-size: cover;
     -o-background-size: cover;
 }
-.img-size{
+
+.img-size {
     max-height: 40px;
     max-width: 40px;
 }
@@ -60,17 +61,19 @@ footer {
     margin: 50px 0;
 }
 
-.subtotal{
+.subtotal {
     margin-top: 10px;
     font-size: 20px;
 }
-.shoppingButtons{
-    margin-bottom:30px;
-    margin-top:70px;
+
+.shoppingButtons {
+    margin-bottom: 30px;
+    margin-top: 70px;
 }
 
 #myList > li {
     display: block;
+    text-align: left;
 }
 
 #myList > li:before {
@@ -80,44 +83,54 @@ footer {
     font-size: 12px;
     float: left;
     margin-top: 4px;
-    margin-left: -17px;
+    margin-left: -35px;
     color: black;
 }
 
-#panelInfo{
+#panelInfo {
     background-color: #bce8f1;
 }
 
 .thick-line {
     border-top: 2px solid;
 }
+
 .toRight {
     text-align: right;
 }
-#addressPanel{
+
+#addressPanel {
     border: none;
 }
+
 #movies{
     font-size: 12px;
-
 }
-#moviesTable{
+#movies td{
+    height: 80px;
+    overflow: hidden;
+}
+
+#moviesTable {
     margin-top: 12px;
 }
-#moviesTableDiv{
-}
-.my-error-class {
-    color:red;
-}
-.my-valid-class {
-    color:green;
+
+#moviesTableDiv {
 }
 
-#cartTable th{
+.my-error-class {
+    color: red;
+}
+
+.my-valid-class {
+    color: green;
+}
+
+#cartTable th {
     background-color: #5bc0de;
 }
 
-@media(max-width:768px) {
+@media (max-width: 768px) {
     section {
         padding-top: 25px;
         padding-bottom: 25px;
